tests/conformance/syntax/positive/binder_grouping_valid.ditt
module Syntax.BinderGrouping where

postulate C : Cat
pair : (x y : C) -> C = \x y. x
