tests/conformance/syntax/negative/binder_grouping_invalid.ditt
module Syntax.BinderGroupingBad where

postulate C : Cat
pair : (x y C) -> C = \x y. x
